# qwen-local

./: .gitignore  README.md  main.py  pyproject.toml  start.py
docs/: #U6253#U5305#U4e0e#U9a8c#U8bc1.md  #U9879#U76ee#U6d41#U7a0b#U5206#U6790.md  CopilotKit#U63a5#U5165#U6307#U5357.md  CopilotKit#U90e8#U7f72#U6b65#U9aa4.md  GPU#U914d#U7f6e#U6307#U5357.md  RAG#U6d41#U7a0b#U5206#U6790.md  uv-sync#U6d41#U7a0b#U8bf4#U660e.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/cancel/: route.ts
frontend/app/api/copilotkit/: route.ts
frontend/app/api/shutdown/: route.ts
frontend/patches/: @copilotkit+runtime+1.53.0.patch
rag_docs/: #U7591#U96be#U610f#U89c1#U5904#U7406_translated.json  素材.docx  素材_整理版.docx
scripts/: create_desktop_shortcut.ps1  deploy.bat  deploy_cn.bat  deploy_prepare.bat  pack.ps1  run.bat  setup.ps1
src/: download_model.py  download_rag_models.py  model_loader.py  rag_pipeline.py  server.py
